...
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/floatingActionButton"
        app:backgroundTint="@android:color/white"
        android:onClick="OpenAddExpense"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp" />
...
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/floatingActionButton2"
        app:backgroundTint="@android:color/white"
        android:layout_alignParentRight="true"
        android:layout_below="@id/floatingActionButton"
        android:onClick="OpenEditExpense"
        android:layout_marginTop="63dp" />

...
